--- a/src/components/ParamsForm/ParamsForm.module.css
+++ b/src/components/ParamsForm/ParamsForm.module.css
@@ -15,6 +15,11 @@
     display: flex;
     flex-direction: column
 }
+
+.groupButton{
+    justify-content: 'center'
+}
+
 .groupTitle{
     padding: 8px;
     text-align: center;
