--- a/src/components/TeachersListItem/TeacherListItem.module.css
+++ b/src/components/TeachersListItem/TeacherListItem.module.css
@@ -1,7 +1,11 @@
 .Card{
-  width: 100%;
-  margin: 0 10px;
+  margin: 10px 0px;
+  padding: 16px;
+  display: flex;
 }
 
 .CardMedia{
+  width: 100px;
+  height: 100px;
+  flex-shrink: 0;
 }
