--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ html, body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: coral;
+  background-image: url("bg-pattern.jpg");
 }
 
 code {
